--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "lodash.defaultsdeep": "^4.6.0",
     "mini-css-extract-plugin": "^0.4.0",
     "node-sass": "^4.9.3",
+    "papaparse": "^4.6.3",
     "postcss-loader": "^2.1.3",
     "sass-loader": "^7.0.1",
     "style-loader": "^0.20.3",
