--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "clean-webpack-plugin": "^0.1.19",
     "copy-webpack-plugin": "^4.6.0",
     "css-loader": "^0.28.11",
+    "d3-collection": "^1.0.7",
     "eslint": "^4.19.1",
     "eslint-loader": "^2.0.0",
     "file-loader": "^1.1.11",
