--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "postcss-loader": "^2.1.3",
     "sass-loader": "^7.0.1",
     "style-loader": "^0.20.3",
+    "svg-url-loader": "^2.3.2",
     "webpack": "^4.20.2",
     "webpack-cli": "^3.1.1",
     "webpack-dev-server": "^3.1.5",
