--- a/.gitmodules
+++ b/.gitmodules
@@ -14,3 +14,6 @@
 	path = submodules/ROUTR
 	url = git@github.com:pewtrusts/ROUTR.git
 	branch = v1
+[submodule "submodules/autoComplete.js"]
+	path = submodules/autoComplete.js
+	url = git@github.com:pewtrusts/autoComplete.js.git
