--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "papaparse": "^4.6.3",
     "postcss-loader": "^2.1.3",
     "sass-loader": "^7.0.1",
+    "stateful-dead": "^0.1.5",
     "style-loader": "^0.20.3",
     "webpack": "^4.20.2",
     "webpack-cli": "^3.1.1",
