--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "node-sass": "^4.9.3",
     "papaparse": "^4.6.3",
     "postcss-loader": "^2.1.3",
+    "pubsub-setter": "^1.0.2",
     "sass-loader": "^7.0.1",
     "stateful-dead": "^0.1.5",
     "style-loader": "^0.20.3",
