--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "html-webpack-plugin": "^3.2.0",
     "html-webpack-template": "^6.2.0",
     "lodash.defaultsdeep": "^4.6.0",
+    "markdown-loader": "^5.0.0",
     "mini-css-extract-plugin": "^0.4.0",
     "node-sass": "^4.9.3",
     "papaparse": "^4.6.3",
