--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "sass-loader": "^7.0.1",
     "stateful-dead": "^0.1.5",
     "style-loader": "^0.20.3",
+    "svg-url-loader": "^2.3.2",
     "webpack": "^4.20.2",
     "webpack-cli": "^3.1.1",
     "webpack-dev-server": "^3.1.5",
