Installs tippy.js

--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "stateful-dead": "^0.1.5",
     "style-loader": "^0.20.3",
     "svg-url-loader": "^2.3.2",
+    "tippy.js": "^4.0.4",
     "webpack": "^4.20.2",
     "webpack-cli": "^3.1.1",
     "webpack-dev-server": "^3.1.5",
