--- a/package.json
+++ b/package.json
@@ -34,6 +34,8 @@
     "node-sass": "^4.9.3",
     "papaparse": "^4.6.3",
     "postcss-loader": "^2.1.3",
+    "prerender-spa-plugin": "^3.4.0",
+    "pretty": "^2.0.0",
     "pubsub-setter": "^1.0.2",
     "sass-loader": "^7.0.1",
     "stateful-dead": "^0.1.5",
