--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "clean-webpack-plugin": "^0.1.19",
     "copy-webpack-plugin": "^4.6.0",
     "css-loader": "^0.28.11",
+    "cssnano": "^4.1.10",
     "d3-collection": "^1.0.7",
     "eslint": "^4.19.1",
     "eslint-loader": "^2.0.0",
@@ -33,7 +34,10 @@
     "mini-css-extract-plugin": "^0.4.5",
     "node-sass": "^4.9.3",
     "papaparse": "^4.6.3",
+    "postcss-assets": "^5.0.0",
+    "postcss-assets-webpack-plugin": "^3.0.0",
     "postcss-loader": "^2.1.3",
+    "postcss-preset-env": "^6.6.0",
     "prerender-spa-plugin": "^3.4.0",
     "pretty": "^2.0.0",
     "pubsub-setter": "^1.0.2",
@@ -41,6 +45,7 @@
     "stateful-dead": "^0.1.5",
     "style-loader": "^0.20.3",
     "svg-url-loader": "^2.3.2",
+    "terser-webpack-plugin": "^1.2.3",
     "tippy.js": "^4.0.4",
     "webpack": "^4.20.2",
     "webpack-cli": "^3.1.1",
