Adds local preview config option

--- a/package.json
+++ b/package.json
@@ -7,7 +7,9 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "build": "webpack --config webpack.build.js --env production",
     "start": "webpack-dev-server --open --config webpack.dev.js --env development",
-    "preview": "webpack --config webpack.preview.js --env preview"
+    "broadcast": "webpack-dev-server --open --config webpack.dev.js --env development --host 0.0.0.0 --port 8080",
+    "preview": "webpack --config webpack.preview.js --env preview",
+    "localpreview": "webpack --config webpack.preview.js --env localpreview"
   },
   "keywords": [],
   "author": "",
