--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "pretty": "^2.0.0",
     "pubsub-setter": "^1.0.2",
     "sass-loader": "^7.0.1",
+    "smoothscroll-polyfill": "^0.4.4",
     "stateful-dead": "^0.1.5",
     "style-loader": "^0.20.3",
     "svg-url-loader": "^2.3.2",
